2013-05-08  Paolo Carlini  <paolo.carlini@oracle.com>

PR tree-optimization/57200
	* tree-ssa-loop-niter.c (do_warn_aggressive_loop_optimizations):
	Only call inform if the preceding warning_at returns true.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@198704 138bc75d-0d04-0410-961f-82ee72b054a4